--- a/src/components/LivroMenuInterface.css
+++ b/src/components/LivroMenuInterface.css
@@ -11,3 +11,19 @@
   justify-content: center;
   color: #000;
 }
+
+/* LivroMenuInterface.css */
+.livro-menu-interface .livro-titulo {
+  font-weight: bold;
+  margin-top: 6px;
+  font-size: 1.1em;
+  color: #ffa686;
+}
+
+.livro-menu-interface-disabled {
+  background-color: #e0e0e0 !important;
+  color: #bbb !important;
+  cursor: not-allowed !important;
+  box-shadow: none !important;
+  border: 1px solid #ccc !important;
+}
