--- a/src/components/MainMenu.css
+++ b/src/components/MainMenu.css
@@ -74,27 +74,29 @@
     
 }
 
-.main-menu ul {
+.top-bar a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
+    transition: color 0.2s;
+}
+
+.top-bar a:hover {
+    color: #ffffff;
+}
+
+.top-bar ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.main-menu li {
+.top-bar li {
     display: inline-block;
     margin: 0 10px;
 }
 
-.main-menu a {
-    text-decoration: none;
-    color: #000000;
-    font-weight: bold;
-}
 
-.main-menu a:hover {
-    color: #ffffff;
-    
-}
 
 .main {
     flex: 1; 
